# QI18n

./: CMakeLists.txt  QI18n.pc.in  QI18n_global.h  README.md  qi18n.cpp  qi18n.h
